--- a/profit-loss-calculator/.gitignore
+++ b/profit-loss-calculator/.gitignore
@@ -5,10 +5,8 @@ config_personal.py
 .env
 
 # Output files containing trading data
-output/
-logs/
 *.log
-
+*.json
 # Python cache and compiled files
 __pycache__/
 *.py[cod]
@@ -64,12 +62,6 @@ Thumbs.db
 # Personal notes and documentation
 personal_notes.md
 todo.txt
-
-# Any files containing account numbers or credentials
-*account*
-*credential*
-*password*
-*secret*
 
 # JSON output files that may contain sensitive data
 *.json
